--- a/uploadDownloadBacked/.classpath
+++ b/uploadDownloadBacked/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="C:/Alfresco/tomcat/webapps/alfresco/WEB-INF/lib/alfresco-core-4.2.b.jar"/>
 	<classpathentry kind="lib" path="C:/Alfresco/tomcat/webapps/alfresco/WEB-INF/lib/alfresco-data-model-4.2.b.jar"/>
@@ -144,5 +145,6 @@
 	<classpathentry kind="lib" path="C:/Users/tomasz/Desktop/htmlparser-1.6.jar"/>
 	<classpathentry kind="lib" path="C:/Users/tomasz/Desktop/commons-logging-1.0.4.jar"/>
 	<classpathentry kind="lib" path="C:/Users/tomasz/Desktop/commons-io-2.4-bin/commons-io-2.4/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/tomasz/Desktop/cr-1_0-fr-spec/jsr170-1.0/lib/jcr-1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
